--- a/views/index.html
+++ b/views/index.html
@@ -87,7 +87,7 @@
 <div class="card-group card-group1 row row-cols-1 row-cols-md-5 g-4" style="width: 90%; margin: auto; background-color: rgb(255, 253, 245);" >
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="pesok-karii.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Песок карьерный</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -96,7 +96,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="mytii-pesok.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Песок мытый</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -105,7 +105,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Песок сеяный</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -114,7 +114,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="pgs_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">ПГС (песчано-гравийная смесь)</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -123,7 +123,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="peskogrunt.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Пескогрунт</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -132,7 +132,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="sch5-20.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Щебень 5/20</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -141,7 +141,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="sch20-40-gr.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Щебень 20/40</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -150,7 +150,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="sch40-70-gr.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Щебень 40/70</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -159,7 +159,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="noroo.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Суглинок</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -168,7 +168,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="glina.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Глина</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -177,7 +177,7 @@
     </div>
     <div class="col" style="margin-left: 20%;">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="grav520.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Гравий 5/20</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -186,7 +186,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="grav2040b.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Гравий 20/40</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -195,7 +195,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="grav40.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Гравий 40/70</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -325,8 +325,9 @@
         <button type="submit" style="background-color: rgb(233, 159, 25); color: white" class="btn btn-warning btn-lg margin-auto" onclick="final_values()">Оставить заявку</button>
     </form>
 </div>
-
+<footer>
+    <div class='cr-con'>Copyright &copy; 2023 | Доставка с карьера | Made by M&G</div>
+</footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-</body>
 </html>
