--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Заголовок страницы</title>
+    <title>Доставка песка Истра</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="script.js"></script>
@@ -11,9 +11,9 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 <header>
     <div class="image">
-        <img style="height: 690px; object-fit: cover;" src="https://psv4.userapi.com/c909218/u240302302/docs/d51/1df7e6b43c2b/IMG_5561.jpg?extra=m9lDS3DYdgsB3GVT7hdZ0AEC9l4k9lgeFrCIcfNUzVkZVkU251gIIdviQpPBAgN0nOJGDmDZcFqFjHWw8sOie3IqOO_lE-gI7SNDy6xHOJXky9-DBX530Ojm0iYlJe2zCBH7QMCAeUye4-TqVX8WETAi1g" alt="SctAa.gif">
-        <div class="image-text1"><span>Доставка песка в Истре и области без посредников, напрямую с карьера</span>
-            <p class="image-text2">Низкие цены от 600р за м³ за счёт: своего автопарка, современной логистической системы и отсутствия посредников. Заказ от 20 м³. Отгрузка точно по весам. Все виды и фракции песка. ГОСТ.
+        <img style="height: 690px; object-fit: cover;" src="fon.jpg" alt="AAAAA">
+        <div class="image-text1"><span>Доставка песка по Истринскому району без посредников, напрямую с карьера</span>
+            <p class="image-text2">Низкие цены от 600р за м³ с доставкой за счёт: своего автопарка, современной логистической системы и отсутствия посредников. Заказ от 20 м³. Отгрузка точно по весам. Все виды и фракции песка. ГОСТ.
                 <br></br><a href="#container"><button type="button" style="background-color: mediumseagreen;" class="btn btn-success">Оставить заявку</button></a></p>
         </div>
     </div>
@@ -84,12 +84,12 @@
 <div class="price">
     <h2 class="t1">Прайс-лист</h2>
 </div>
-<div class="card-group card-group1 row row-cols-1 row-cols-md-5 g-4" style="width: 90%; margin: auto; background-color: rgb(255, 253, 245);" >
+<div class="card-group card-group1 row row-cols-1 row-cols-md-4 g-4" style="width: 90%; margin: auto; background-color: rgb(255, 253, 245);" >
     <div class="col">
         <div class="card h-100 shadow">
             <img src="pesok-karii.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Песок карьерный</h5>
+                <h5 class="card-title" style="font-size: 2vw">Песок карьерный</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -108,15 +108,6 @@
             <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Песок сеяный</h5>
-                <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100 shadow">
-            <img src="pgs_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">ПГС (песчано-гравийная смесь)</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -175,7 +166,7 @@
             </div>
         </div>
     </div>
-    <div class="col" style="margin-left: 20%;">
+    <div class="col">
         <div class="card h-100 shadow">
             <img src="grav520.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -208,11 +199,11 @@
     <h2 class="t1">Как с нами работать?</h2>
 </div>
 <!--card-group row row-cols-1 row-cols-md-5 g-4-->
-<div class="card-group card-group2 row row-cols-1 row-cols-md-3 g-4" style="width: 80%; margin: auto">
+<div class="card-group card-group2 row row-cols-1 row-cols-md-3 g-4" style="width: 90%; margin: auto">
     <div class="col">
         <div class="card text-center h-100 shadow-sm">
-            <div class="card-header" style="text-align: center">
-                <h2>Оставляете заявку</h2>
+            <div class="card-header" style="text-align: center; font-size: 30px;">
+                <h2 style="font-size: 30px;">Оставляете заявку</h2>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -224,15 +215,15 @@
                     </div>
                 </div>
             </div>
-            <div class="card-footer" style="text-align: center">
+            <div class="card-footer" style="text-align: center; font-size: 2vw;">
                 <small class="text-body-secondary">Не забываем про заказы</small>
             </div>
         </div>
     </div>
     <div class="col">
         <div class="card text-center h-100 shadow-sm">
-            <div class="card-header" style="text-align: center">
-                <h2>Договариваемся</h2>
+            <div class="card-header" style="text-align: center; font-size: 27px;">
+                <h2 style="font-size: 27px;">Договариваемся</h2>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -244,15 +235,15 @@
                     </div>
                 </div>
             </div>
-            <div class="card-footer" style="text-align: center">
+            <div class="card-footer" style="text-align: center; font-size: 2vw;">
                 <small class="text-body-secondary">Согласованные цены гарантированно не изменятся</small>
             </div>
         </div>
     </div>
     <div class="col">
         <div class="card text-center h-100 shadow-sm">
-            <div class="card-header" style="text-align: center">
-                <h2>Привозим песок</h2>
+            <div class="card-header" style="text-align: center; font-size: 30px;">
+                <h2 style="font-size: 30px;">Привозим песок</h2>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -264,7 +255,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card-footer" style="text-align: center">
+            <div class="card-footer" style="text-align: center; font-size: 2vw;">
                 <small class="text-body-secondary">Не подводим клиентов, знаем что на доставку песка завязаны другие процессы</small>
             </div>
         </div>
