--- a/views/style.css
+++ b/views/style.css
@@ -128,20 +128,20 @@
 .card-title{
     font-family: 'Roboto',Arial,sans-serif;
     font-weight: 600;
-    font-size: 30px;
+    font-size: 2vw;
     color: #000000;
     padding-bottom: 10px;
 }
 .card-text{
     font-family: 'Roboto',Arial,sans-serif;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 18px;
     color: #000000;
 }
 .card-body{
     display: block;
     padding-top: 60px;
-    padding-left: 20px;
+    padding-left: 18px;
     padding-right: 20px;
 }
 
@@ -160,7 +160,7 @@
 .card-text{
     font-family: 'Roboto',Arial,sans-serif;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 2vw;
     color: #000000;
 }
 .text-body-secondary {
