--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
             <div class="card-body">
                 <h5 class="card-title">Я НЕ знаю
                     какой песок мне нужен</h5>
-                <p class="card-text">Это норма. Позвоните или напишите. Расскажите о задаче, и наш специалист точно расскажет, какой песок подойдёт. Он делает это 20-30 раз в день и всегда оказывается прав. Телефон: +79775935401</p>
+                <p class="card-text">Это норма. Позвоните или напишите. Наш специалист точно расскажет, какой песок подойдёт. Телефон: +79775935401</p>
                 <a href="tel:+79775935401" class="btn btn-warning btn1">Позвонить</a>
             </div>
         </div>
