--- a/views/style.css
+++ b/views/style.css
@@ -119,7 +119,7 @@
 .card1{
     text-align: center;
     margin: auto;
-    height: 380px;
+    height: 450px;
     width: 470px;
     border-radius: 5px;
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.10);
@@ -151,7 +151,7 @@
     font-family: 'Roboto',Arial,sans-serif;
     font-weight: 300;
     font-size: 20px;
-    margin: auto;
+    padding: 9px 20px;
 }
 
 .card-header {
