--- a/views/index.html
+++ b/views/index.html
@@ -22,21 +22,27 @@
 <div class="row row1">
     <div class="col-sm-6 mb-3 mb-sm-0">
         <div class="card1">
-            <div class="card-body">
+            <div class="card-body card-body1" style="display: flex;align-items: center; justify-content: center; flex-direction: column">
+                <div>
                 <h5 class="card-title">Я знаю
                     какой песок мне нужен</h5>
-                <p class="card-text">Если вы знаете какой песок нужен — вид, фракция, ГОСТ, точный объем. Оставьте заявку. Мы предложим вам лучшие условия.</p>
-                <a href="#container" class="btn btn-warning btn1">Оставьте заявку</a>
+                <p class="card-text" style="padding-bottom: 16px">Если вы знаете какой песок нужен — вид, фракция, ГОСТ, точный объем. Оставьте заявку. Мы предложим вам лучшие условия.</p>
+                </div>
+                <div class="btn btn-warning btn1">
+                <a href="#container" style="text-decoration: none; color: white">Оставьте заявку</a>
+                </div>
             </div>
         </div>
     </div>
     <div class="col-sm-6 colsize">
         <div class="card1">
-            <div class="card-body">
+            <div class="card-body" style="display: flex;align-items: center; justify-content: center; flex-direction: column">
                 <h5 class="card-title">Я НЕ знаю
                     какой песок мне нужен</h5>
                 <p class="card-text">Это норма. Позвоните или напишите. Наш специалист точно расскажет, какой песок подойдёт. Телефон: +79775935401</p>
-                <a href="tel:+79775935401" class="btn btn-warning btn1">Позвонить</a>
+                <div class="btn btn-warning btn1">
+                <a href="tel:+79775935401" style="text-decoration: none; color: white">Позвонить</a>
+                </div>
             </div>
         </div>
     </div>
@@ -203,7 +209,7 @@
     <div class="col">
         <div class="card text-center h-100 shadow-sm">
             <div class="card-header" style="text-align: center; font-size: 30px;">
-                <h2 style="font-size: 30px;">Оставляете заявку</h2>
+                <h2 style="font-size: 29px;">Оставляете заявку</h2>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -223,12 +229,12 @@
     <div class="col">
         <div class="card text-center h-100 shadow-sm">
             <div class="card-header" style="text-align: center; font-size: 27px;">
-                <h2 style="font-size: 27px;">Договариваемся</h2>
+                <h2 style="font-size: 29px;">Договариваемся</h2>
             </div>
             <div class="card-body">
                 <div class="row">
                     <div class="col">
-                        <p class="card-text">Договариваемся с вами. Уточняем адрес, согласуем время поставки.</p>
+                        <p class="card-text">Договариваемся с вами. Уточняем адрес, согласуем точное время поставки.</p>
                     </div>
                     <div class="col">
                         <img src="sand.png" alt="">
@@ -236,14 +242,14 @@
                 </div>
             </div>
             <div class="card-footer" style="text-align: center; font-size: 2vw;">
-                <small class="text-body-secondary">Согласованные цены гарантированно не изменятся</small>
+                <small class="text-body-secondary">Согласованные цены не изменятся</small>
             </div>
         </div>
     </div>
     <div class="col">
         <div class="card text-center h-100 shadow-sm">
             <div class="card-header" style="text-align: center; font-size: 30px;">
-                <h2 style="font-size: 30px;">Привозим песок</h2>
+                <h2 style="font-size: 29px;">Привозим песок</h2>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -256,7 +262,7 @@
                 </div>
             </div>
             <div class="card-footer" style="text-align: center; font-size: 2vw;">
-                <small class="text-body-secondary">Не подводим клиентов, знаем что на доставку песка завязаны другие процессы</small>
+                <small class="text-body-secondary">Не подводим клиентов</small>
             </div>
         </div>
     </div>
