--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
         <img style="height: 690px; object-fit: cover;" src="fon.jpg" alt="AAAAA">
         <div class="image-text1"><span>Доставка песка по Истринскому району без посредников, напрямую с карьера</span>
             <p class="image-text2">Низкие цены от 600р за м³ с доставкой за счёт: своего автопарка, современной логистической системы и отсутствия посредников. Заказ от 20 м³. Отгрузка точно по весам. Все виды и фракции песка. ГОСТ.
-                <br></br><a href="#container"><button type="button" style="background-color: mediumseagreen;" class="btn btn-success">Оставить заявку</button></a></p>
+                <br></br><a href="#container"><button type="button" style="background-color: mediumseagreen; width: 40%; font-size: 26px; font-family: 'Roboto',Arial,sans-serif;" class="btn btn-success">Оставить заявку</button></a></p>
         </div>
     </div>
 </header>
@@ -229,7 +229,7 @@
     <div class="col">
         <div class="card text-center h-100 shadow-sm">
             <div class="card-header" style="text-align: center; font-size: 27px;">
-                <h2 style="font-size: 29px;">Договариваемся</h2>
+                <h2 style="font-size: 29px;">Обговариваем условия</h2>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -249,12 +249,12 @@
     <div class="col">
         <div class="card text-center h-100 shadow-sm">
             <div class="card-header" style="text-align: center; font-size: 30px;">
-                <h2 style="font-size: 29px;">Привозим песок</h2>
+                <h2 style="font-size: 29px;">Принимаете заказ</h2>
             </div>
             <div class="card-body">
                 <div class="row">
                     <div class="col">
-                        <p class="card-text">Доставка и прием оплаты. Всегда вовремя. Выгружаем, принимаем оплату</p>
+                        <p class="card-text">Экспресс доставка от трёх часов. Оплата производится после получения заказа.</p>
                     </div>
                     <div class="col">
                         <img src="car.png" alt="">
@@ -262,7 +262,7 @@
                 </div>
             </div>
             <div class="card-footer" style="text-align: center; font-size: 2vw;">
-                <small class="text-body-secondary">Не подводим клиентов</small>
+                <small class="text-body-secondary">Не опаздываем</small>
             </div>
         </div>
     </div>
