--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
         <img style="height: 690px; object-fit: cover;" src="fon.jpg" alt="AAAAA">
         <div class="image-text1"><span>Доставка песка по Истринскому району без посредников, напрямую с карьера</span>
             <p class="image-text2">Низкие цены от 600р за м³ с доставкой за счёт: своего автопарка, современной логистической системы и отсутствия посредников. Заказ от 20 м³. Отгрузка точно по весам. Все виды и фракции песка. ГОСТ.
-                <br></br><a href="#container"><button type="button" style="background-color: mediumseagreen; width: 40%; font-size: 26px; font-family: 'Roboto',Arial,sans-serif;" class="btn btn-success">Оставить заявку</button></a></p>
+                <br></br><a href="#container"><button type="button" style="background-color: mediumseagreen; width: 40%; height: 70px; font-size: 35px; font-family: 'Roboto',Arial,sans-serif;" class="btn btn-success">Оставить заявку</button></a></p>
         </div>
     </div>
 </header>
